Test_direct/slurm-62538.out
bash: cannot set terminal process group (30874): Inappropriate ioctl for device
bash: no job control in this shell
Removing compiler version 2023.1.0
Use `module list` to view any remaining dependent modules.
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Removing mkl version 2023.1.0
Use `module list` to view any remaining dependent modules.


 @@@@@@   @@@@@@@    @@@@@@   @@@  @@@
@@@@@@@@  @@@@@@@@  @@@@@@@   @@@  @@@
@@!  @@@  @@!  @@@  !@@       @@!  @@@
!@!  @!@  !@!  @!@  !@!       !@!  @!@
@!@  !@!  @!@@!@!   !!@@!!    @!@!@!@!
!@!  !!!  !!@!!!     !!@!!!   !!!@!!!!
!!:!!:!:  !!:            !:!  !!:  !!!
:!: :!:   :!:           !:!   :!:  !:!
::::: :!   ::       :::: ::   ::   :::
 : :  :::  :        :: : :     :   : :



   -- Quantum  Package  Shell --

Loading compiler version 2023.1.0
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Loading mkl version 2023.1.0
mkdir: cannot create directory ‘newest_eta1’: File exists
bash: cannot set terminal process group (31060): Inappropriate ioctl for device
bash: no job control in this shell
Removing compiler version 2023.1.0
Use `module list` to view any remaining dependent modules.
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Removing mkl version 2023.1.0
Use `module list` to view any remaining dependent modules.

                         ______
______ _________ ___________  /_
_  __ `/___  __ \__  ___/__  __ \
/ /_/ / __  /_/ /_(__  ) _  / / /
\__, /  _  .___/ /____/  /_/ /_/
  /_/   /_/



   -- Quantum  Package  Shell --

Loading compiler version 2023.1.0
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Loading mkl version 2023.1.0
qp: N2_minus.hf.4states.no.cipsi.17200 not found
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.out.data1.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
EZFIO directory not set: try 'ezfio set_file'
EZFIO directory not set: try 'ezfio set_file'
cp: cannot stat 'Optimal_LB': No such file or directory
cp: cannot stat 'Optimal_EI': No such file or directory
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
EZFIO directory not set: try 'ezfio set_file'
Fatal error: exception Failure("Inconsistent command line")
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py:7: UserWarning: loadtxt: input contained no data: "N2_minus.hf.4states.no.cipsi.17200.scan.LB.out.data2.good"
  data = np.loadtxt(input_file)
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 44, in <module>
    process_file(input_file, output_file)
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/Good_columns.py", line 18, in process_file
    val_3rd_col = modified_data[i][2]
                  ~~~~~~~~~~~~~~~~^^^
IndexError: index 2 is out of bounds for axis 0 with size 0
awk: fatal: cannot open file `temp1' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
 /beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py:9: UserWarning:loadtxt: input contained no data: "datafile.dat"
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/version2_newest_eta1/PROGRAM_bayesian_optimization_direct_deriv_test.py", line 12, in <module>
    X = data[:,0].reshape(-1,1)
        ~~~~^^^^^
IndexError: too many indices for array: array is 1-dimensional, but 2 were indexed
slurmstepd-cnzen3-7: error: *** JOB 62538 ON cnzen3-7 CANCELLED AT 2025-03-19T16:55:08 ***
